Bug 545518: [12] Flow analysis is skipped for multi-constant case statement
Also fixes bug 545516 to report usage of multi-constant case statement
preview feature

Change-Id: I7b0428d1e9eb1666847ae8c65f26d7a554da0de4
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>